@@ -6,6 +6,9 @@ remctl 2.5 (unreleased)
     rather than leaving standard input closed.  Some programs don't cope
     with a closed standard input.
 
+    Add a newline to the end of error messages when converting to protocol
+    version one replies.  The old remctl client didn't add a newline.
+
 remctl 2.4 (2007-01-17)
 
     IPv6 support is now automatically enabled on systems that support it.
